@@ -435,6 +435,8 @@ Extension Modules
 Tests
 -----
 
+- Issue #16274: Fix test_asyncore on Solaris.  Patch by Giampaolo Rodola'.
+
 - Issue #15040: Close files in mailbox tests for PyPy compatibility.
   Original patch by Matti Picus.
 
